--- a/archi-landing-page/package.json
+++ b/archi-landing-page/package.json
@@ -2,8 +2,11 @@
   "name": "archie-landing-page",
   "private": true,
   "version": "0.0.0",
+  "homepage": "http://IvanLMdev.github.io/landing-archi",
   "type": "module",
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
@@ -11,6 +14,7 @@
   },
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
+    "gh-pages": "^6.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.0",
