gh-pages + vite

--- a/archi-landing-page/package.json
+++ b/archi-landing-page/package.json
@@ -2,15 +2,14 @@
   "name": "archie-landing-page",
   "private": true,
   "version": "0.0.0",
-  "homepage": "http://IvanLMdev.github.io/landing-archi",
   "type": "module",
   "scripts": {
-    "predeploy":"npm run build",
-    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy":"npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
