--- a/archi-landing-page/package.json
+++ b/archi-landing-page/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "predeploy":"npm run build",
+    "predeploy":"npm run build && echo archigrowth.lat > ./build/CNAME",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
