--- a/archi-landing-page/package.json
+++ b/archi-landing-page/package.json
@@ -8,9 +8,10 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "predeploy":"npm run build && echo archigrowth.lat > ./build/CNAME",
+    "predeploy":"npm run build",
     "deploy": "gh-pages -d dist"
   },
+  
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
     "gh-pages": "^6.2.0",
